Correccion del FrontEnd, header de la app web

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>📊 Sales Analytics Dashboard</h1>
+        <h1>Análisis de datos</h1>
         <p class="subtitle">Panel de control de ventas y análisis de datos</p>
       </header>
 
